fixed full screen bug on mobile

--- a/src/CustomVideoPlayer.css
+++ b/src/CustomVideoPlayer.css
@@ -332,3 +332,25 @@ video source {
     display: none;
   }
 }
+
+.video-container:fullscreen,
+.video-container:-webkit-full-screen,
+.video-container:-moz-full-screen {
+  width: 100vw;
+  height: 100vh;
+  background: black;
+}
+
+.video-container:fullscreen .video-player,
+.video-container:-webkit-full-screen .video-player,
+.video-container:-moz-full-screen .video-player {
+  height: 100%;
+  object-fit: contain;
+}
+
+/* Fix for iOS */
+@media screen and (max-device-width: 768px) and (orientation: landscape) {
+  .video-container:fullscreen .video-player {
+    height: 100vh;
+  }
+}
